# learning-actix-web

./: .gitignore  Cargo.toml  README.md
errors/: Cargo.toml
errors/src/: errors_1.rs  errors_2.rs  errors_3.rs  main.rs
handler-basic/: Cargo.toml
handler-basic/src/: extractors.rs  handler.rs  main.rs
intro/: Cargo.toml
intro/src/: app_setup.rs  main.rs  request_derived.rs  request_manual.rs  state.rs
middleware/: Cargo.toml
middleware/src/: main.rs
running-tests/: Cargo.toml
running-tests/src/: main.rs
session-auth-template/: Cargo.toml
session-auth-template/src/: main.rs
session-auth-template/static/templates/: error.html  index.html
url-dispatch/: Cargo.toml
url-dispatch/src/: main.rs
web-auth-server/: Cargo.toml  yarte.toml
web-auth-server/migrations/2020-12-30-204657_users/: up.sql
web-auth-server/migrations/2020-12-30-204710_confirmations/: up.sql
web-auth-server/src/: auth_handler.rs  email_service.rs  errors.rs  main.rs  models.rs  password_handler.rs  register_handler.rs  templates.rs  utils.rs  vars.rs
web-auth-server/templates/includes/: head.hbs
web-auth-server/templates/layouts/: base.hbs
web-auth-server/templates/pages/: me.hbs  password.hbs  register.hbs  sign_in.hbs
