[package]
name = "web-auth-server"
version = "0.1.0"
authors = ["mishaszu <mishaszu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "*"
actix-files = "0.5"
actix-rt = "1"
actix-session = "0.4"
actix-web = "3"
argonautica = "0.2"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "*"
lettre = "0.9"
native-tls = "0.2"
r2d2 = "0.8"
serde = { version = "1", fetures = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
yarte = { version = "*", features = ["with-actix-web"] }

[build-dependencies]
yarte = { version = "*", features = ["with-actix-web"] }

